--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ h2 {
 
 .button-action {
   display: inline-block;
-  width: 70%;
+  width: 60%;
   text-align: center;
   font-size: 1rem;
   color: white;
@@ -87,8 +87,8 @@ h2 {
   -ms-border-radius: 45px 45px;
   -o-border-radius: 45px 45px;
   border: none;
-  background: linear-gradient(to top, #9356DC, #FF79DA);
-  box-shadow: 0.2rem 0.5rem #f1eaea;
+  background: linear-gradient(175deg, #FF79DA, #9356DC 95%);
+  box-shadow: 0.5rem 0.5rem 1rem rgb(202, 198, 198);
   transform: scale(1);
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
@@ -108,9 +108,12 @@ h2 {
 }
 .button-action:hover {
   transform: scale(1.2, 1.1);
-  background: linear-gradient(to bottom, #9356DC, #FF79DA);
-  filter: brightness(1.2);
-  -webkit-filter: brightness(1.2);
+  -webkit-transform: scale(1.2, 1.1);
+  -moz-transform: scale(1.2, 1.1);
+  -ms-transform: scale(1.2, 1.1);
+  -o-transform: scale(1.2, 1.1);
+  box-shadow: 1rem 1.2rem 2rem rgb(202, 198, 198);
+  background: linear-gradient(to bottom right, #ffa2e5 1%, #a978e3);
 }
 
 .restaurant-like {
@@ -330,8 +333,7 @@ h2 {
   padding: 1rem;
   font-weight: 700;
   background-color: rgb(252, 246, 246);
-  border-top: solid 2px rgba(160, 157, 157, 0.849);
-  box-shadow: inset 0 0.2em rgba(7, 15, 56, 0.07);
+  box-shadow: inset 0 0.2rem 0.2rem rgba(7, 15, 56, 0.07);
   background-color: rgba(7, 15, 56, 0.03);
 }
 .presentation__heading {
@@ -407,7 +409,7 @@ h2 {
   gap: 1rem;
   margin: 1rem 0 1rem 0;
   padding: 1rem;
-  box-shadow: 0.125rem 0.125rem 0.5rem #f1eaea;
+  box-shadow: 0.5rem 0.5rem 1rem rgb(202, 198, 198);
   font-weight: 700;
   cursor: pointer;
 }
@@ -525,7 +527,7 @@ h2 {
   -moz-transform: scale(1.02);
   -ms-transform: scale(1.02);
   -o-transform: scale(1.02);
-  box-shadow: 0.125rem 0.125rem 0.5rem #f1eaea;
+  box-shadow: 0.5rem 0.5rem 1rem rgb(202, 198, 198);
 }
 .restaurant__link {
   display: inline-block;
@@ -538,7 +540,7 @@ h2 {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  box-shadow: 0.125rem 0.125rem 0.5rem #f1eaea;
+  box-shadow: 0.5rem 0.5rem 1rem rgb(202, 198, 198);
   border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
   -webkit-border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
   -moz-border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
