--- a/sass/components/_button-action.scss
+++ b/sass/components/_button-action.scss
@@ -1,6 +1,6 @@
 .button-action {
     display: inline-block;
-    width: 70%;
+    width: 60%;
     text-align: center;
     font-size: 1rem;
     color: $colour-text;
@@ -14,8 +14,8 @@
     -ms-border-radius: 45px 45px;
     -o-border-radius: 45px 45px;
     border: none;
-    background: linear-gradient(to top, $colour-primary, $colour-secondary);
-    @include initial-shadow-element (0.2rem);
+    background: linear-gradient(175deg, $colour-secondary, $colour-primary 95% );
+    @include initial-shadow-element;
     transform: scale(1);
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
@@ -34,9 +34,12 @@
 
     &:hover {
         transform: scale(1.2, 1.1);
-        background: linear-gradient(to bottom, $colour-primary, $colour-secondary);
-        filter: brightness(1.2);
-        -webkit-filter: brightness(1.2);
-}
+        -webkit-transform: scale(1.2, 1.1);
+        -moz-transform: scale(1.2, 1.1);
+        -ms-transform: scale(1.2, 1.1);
+        -o-transform: scale(1.2, 1.1);
+        box-shadow: 1rem 1.2rem 2rem $colour-shadow;
+        background: linear-gradient(to bottom right, lighten($colour-secondary, 8) 1%, lighten($colour-primary, 8));
+    }
 
 }
