--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -39,8 +39,7 @@
         padding: 1rem;
         font-weight: 700;
         background-color: rgb(252, 246, 246);
-        border-top: solid 2px rgba(160, 157, 157, 0.849);
-        box-shadow: inset 0 0.2em rgba(7, 15, 56, 0.07);
+        box-shadow: inset 0 0.2rem 0.2rem rgba(7, 15, 56, 0.07);
         background-color: rgba(7, 15, 56, 0.03);
     }
 
