--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,9 +3,9 @@ $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 $colour-quartery:rgba(65, 60, 60, 0.863);
 $colour-text :white;
-$shadow-size: 0.125rem 0.125rem;
-$shadow-blur-effect: 0.5rem;
-$colour-shadow: #f1eaea;
+$shadow-size: 0.5rem 0.5rem;
+$shadow-blur-effect: 1rem;
+$colour-shadow: rgba(202,198,198,1);
 $margin-elements : 1rem 1rem 1rem 1rem;
 $border-selector: 0.938rem 0.938rem 0.938rem 0.938rem;
 $border-card : 1.25rem 1.25rem 1.25rem 1.25rem;
